# pdash

./: .env.development.example  .env.example  .gitignore  CLAUDE.md  Caddyfile  LICENSE  Makefile  README.md  docker-compose.yml  pyrightconfig.json
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_activity_fts.py  0003_rate_limits.py  0004_seed_example_approvals.py  0005_files.py  0006_agent_registrations.py  (+5 more)
backend/app/: __init__.py  cli.py  config.py  db.py  errors.py  ids.py  logging_config.py  main.py  models.py  seed_approvals.py  seed_home.py  timefmt.py  version.py
backend/scripts/: reseed_approvals.py  reseed_home.py  seed_all_approval_types.py  seed_corkboard_notes.py  smoke_phase3.sh
backend/tests/: _phase3_helpers.py  conftest.py  test_about.py  test_activity_fts.py  test_agent_registration.py  test_agents.py  test_approval_action_file_preview.py  test_approval_dashboard_preview.py  test_auth.py  test_canvas_html.py  test_config.py  test_corkboard.py  test_dispatcher_agent_message.py  test_dispatcher_mcp_tool.py  test_events_bus.py  test_events_publish_hooks.py  test_events_sse_endpoint.py  test_example_approvals_seed.py  test_files_admin.py  test_files_serving.py  test_home_examples.py  test_idempotency.py  test_internal_register_file.py  test_internal_visibility.py  test_mcp_status.py  test_module_file.py  test_module_schemas.py  test_modules.py  test_modules_admin_fire.py  test_page_agent_access.py  test_pages.py  test_phase3_activity_log.py  test_phase3_admin_approve_with_rule.py  test_phase3_append_log.py  test_phase3_engine.py  test_phase3_fire_action.py  test_phase3_internal_misc.py  test_phase3_internal_propose_module.py  test_phase3_lifecycle.py  test_progress.py  (+5 more)
mcp/: .dockerignore  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
mcp/app/: __init__.py  auth.py  backend.py  decision_cache.py  health.py  idem.py  main.py  onboarding.py  settings.py  tools.py
mcp/scripts/: run.sh  smoke.py
mcp/tests/: _mcp_helpers.py  conftest.py  test_auth.py  test_decision_cache.py  test_health_routes.py  test_tools_append_log.py  test_tools_bootstrap.py  test_tools_errors.py  test_tools_get_module_schema.py  test_tools_propose_module.py  test_tools_propose_page.py  test_tools_register_file.py  test_tools_update_module.py  test_tools_visibility.py
screenshot/: Dockerfile  README.md  pyproject.toml
screenshot/app/: __init__.py  main.py
(+220 files in other folders)
