[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdash-mcp"
version = "0.1.0"
description = "MCP server for pdash — translates MCP tool calls to /api/v1/internal/* HTTP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0,<2.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "python-ulid>=3.0,<4.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-asyncio>=0.24,<2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
